.endtoend.old/failure/expected/error_invalid_unary.compile.out
error_invalid_unary.silly:3:5: error: parse error: extraneous input '%' expecting {INTEGER_PATTERN, BOOLEAN_PATTERN, STRING_PATTERN, FLOAT_PATTERN, '-', '(', '+', 'NOT', 'CALL', IDENTIFIER}
    3 | x = %y;  // Invalid unary operator
      |     ^
